[tool.poetry]
name = "multiscale-mixer"
version = "0.2.0"
description = ""
authors = ["Jacobus Smit <jacobusmmsmit@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.3.15"
equinox = "^0.5.6"
einops = "^0.4.1"
jaxlib = "^0.3.15"
matplotlib = "^3.5.2"
diffrax = "^0.2.1"
optax = "^0.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
