[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multimixer"
version = "0.1.0"
description = "An Equinox implementation of N-dimensional MLP-Mixers"
authors = [
    {name = "Jacobus Smit", email = "jacobus.smit@uva.nl"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jaxlib>=0.3.15",
    "jax>=0.3.15",
    "equinox>=0.8.0",
    "einops>=0.4.1",
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["machine learning", "deep learning"]
# exclude = ["examples", "test"]

[project.urls]
"Homepage" = "https://github.com/jacobusmmsmit/multimixer"

[project.optional-dependencies]
dev = [
    "black>22.6.0",
    "matplotlib>3.5.2",
    "optax>=0.1.3",
    "diffrax>=0.2.1",
    "flake8>=5.0.4",
    "isort>=5.10.1",
    "pre-commit>=2.20.0",
    "pytest>=7.1.2",
    ]

[tool.isort]
profile = "black"
src_paths = ["multimixer", "test"]
force_alphabetical_sort_within_sections = true
lines_after_imports = 2
treat_comments_as_code = true
